feat: add meta tags and favicon

--- a/index.html
+++ b/index.html
@@ -2,9 +2,36 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sticky notes</title>
+
+    <!--  Title & Description -->
+    <title>Sticky Notes - Organize Your Ideas</title>
+    <meta
+      name="description"
+      content="A simple and powerful sticky notes app to organize your thoughts, tasks, and ideas. Create, manage, and access your notes easily."
+    />
+
+    <!-- Open Graph (for social sharing) -->
+    <meta property="og:title" content="Sticky Notes - Organize Your Ideas" />
+    <meta
+      property="og:description"
+      content="A simple and powerful sticky notes app to organize your thoughts, tasks, and ideas."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://your-domain.com/" />
+    <meta property="og:image" content="/favIcon/post-it.png" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Sticky Notes - Organize Your Ideas" />
+    <meta
+      name="twitter:description"
+      content="A simple and powerful sticky notes app to organize your thoughts, tasks, and ideas."
+    />
+    <meta name="twitter:image" content="/favIcon/post-it.png" />
+
+    <!--  Favicon -->
+    <link rel="icon" type="image/png" href="/favIcon/post-it.png" />
   </head>
   <body>
     <div id="root"></div>
